--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
           <tr style="padding:0px">
             <td style="padding:2.5%;width:63%;vertical-align:middle">
               <p style="text-align:center">
-                <name>Jon Barron</name>
+                <name>Rishubh Parihar</name>
               </p>
-              <p> I am a second year Ph.D. student at <a href=> Indian Insitute of Science, Bangalore and associated with <a href=> Video Analytics Lab, where I work on generate computer vision algorithms. 
+              <p> I am a second year Ph.D. student at <a href="https://iisc.ac.in/"> Indian Insitute of Science, Bangalore and associated with <a href="https://val.cds.iisc.ac.in/"> Video Analytics Lab, where I work on generate computer vision algorithms. 
               </p>
               <p>
                 I have worked on semantic image editing using StyleGANs, video manipulation and interesting variations of NeRFs 
