changes for image

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p style="text-align:center">
                 <name>Rishubh Parihar</name>
               </p>
-              <p> I am a second year Ph.D. student at <a href="https://iisc.ac.in/"> Indian Insitute of Science, Bangalore and associated with <a href="https://val.cds.iisc.ac.in/"> Video Analytics Lab, where I work on generate computer vision algorithms. 
+              <p> I am a second year Ph.D. student at <a href="https://iisc.ac.in/"> Indian Insitute of Science, Bangalore </a> and associated with <a href="https://val.cds.iisc.ac.in/"> Video Analytics Lab </a>, where I work on generate computer vision algorithms. 
               </p>
               <p>
                 I have worked on semantic image editing using StyleGANs, video manipulation and interesting variations of NeRFs 
@@ -35,7 +35,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/JonBarron.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/JonBarron_circle.jpg" class="hoverZoomLink"></a>
+              <a href="images/JonBarron.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/rishubh_parihar.jpg" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
