added break lines

--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
               <a href="https://sites.google.com/view/flamelatentediting/">project page</a>
               /
               <a href="https://arxiv.org/abs/2207.09855">arXiv</a>
+              /
+              <a href="https://drive.google.com/file/d/1LgKowoYnaJ5sX5TAI7heGOLhGkTbZ5qS/view">video</a>
+              <br>
               <p></p> 
               <p>
               In this work we proposed a Few-shot Latent based Attribute Manipulation and Editing (FLAME) method, a simple yet effective framework to perform highly controlled image editing by latent space manipulation.
@@ -118,7 +121,6 @@
                 <papertitle>Hierarchical Semantic Regularization of Latent Spaces in StyleGANs</papertitle>
               </a>
               <br>
-
               <strong>Tejan Karmali</strong>
               <strong>Rishubh Parihar</strong>
               <strong>Susmit Agrawal</strong>
@@ -128,6 +130,7 @@
               <strong>R. Venkatesh Babu</strong>
               <br>
               <em>ECCV</em>, 2022
+              <br>
               <a href="https://sites.google.com/view/hsr-eccv22/">project page</a>
               /
               <a href="https://arxiv.org/abs/2208.03764">arXiv</a>
