--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
                 <div class="two" id='flame_image'>
-                  <img src='images/flame_after.jpg' width="160"></div>
-                <img src='images/flame_before.jpg' width="160">
+                  <img src='images/flame_after.gif' width="160"></div>
+                <img src='images/flame_before.gif' width="160">
               </div>
               <script type="text/javascript">
                 function flame_start() {
@@ -102,8 +102,8 @@
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
                 <div class="two" id='hsr_image'>
-                  <img src='images/hsr_before.jpg' width="160"></div>
-                <img src='images/hsr_after.jpg' width="160">
+                  <img src='images/hsr_before.png' width="160"></div>
+                <img src='images/hsr_after.png' width="160">
               </div>
               <script type="text/javascript">
                 function hsr_start() {
