--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
                 <div class="two" id='motiontype_image'>
-                  <img src='images/motiontype_before.jpg' width="160"></div>
-                <img src='images/motiontype_after.jpg' width="160">
+                  <img src='images/motiontype_before.png' width="160"></div>
+                <img src='images/motiontype_after.png' width="160">
               </div>
               <script type="text/javascript">
                 function motiontype_start() {
@@ -195,8 +195,8 @@
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
                 <div class="two" id='pixeltransformer_image'>
-                  <img src='images/pixeltransformer_before.jpg' width="160"></div>
-                <img src='images/pixeltransformer_after.jpg' width="160">
+                  <img src='images/pixeltransformer_before.png' width="160"></div>
+                <img src='images/pixeltransformer_after.png' width="160">
               </div>
               <script type="text/javascript">
                 function pixeltransformer_start() {
@@ -227,8 +227,8 @@
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
                 <div class="two" id='fabsoften_image'>
-                  <img src='images/fabsoften_before.jpg' width="160"></div>
-                <img src='images/fabsoften_after.jpg' width="160">
+                  <img src='images/fabsoften_before.png' width="160"></div>
+                <img src='images/fabsoften_after.png' width="160">
               </div>
               <script type="text/javascript">
                 function fabsoften_start() {
@@ -269,8 +269,8 @@
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
                 <div class="two" id='makeup_image'>
-                  <img src='images/makeup_before.jpg' width="160"></div>
-                <img src='images/makeup_after.jpg' width="160">
+                  <img src='images/makeup_before.png' width="160"></div>
+                <img src='images/makeup_after.png' width="160">
               </div>
               <script type="text/javascript">
                 function makeup_start() {
@@ -354,8 +354,8 @@
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
                 <div class="two" id='frog_image'>
-                  <img src='images/frog_before.jpg' width="160"></div>
-                <img src='images/frog_after.jpg' width="160">
+                  <img src='images/frog_before.png' width="160"></div>
+                <img src='images/frog_after.png' width="160">
               </div>
               <script type="text/javascript">
                 function frog_start() {
@@ -389,8 +389,8 @@
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
                 <div class="two" id='raytracer_image'>
-                  <img src='images/raytracer_before.jpg' width="160"></div>
-                <img src='images/raytracer_after.jpg' width="160">
+                  <img src='images/raytracer_before.png' width="160"></div>
+                <img src='images/raytracer_after.png' width="160">
               </div>
               <script type="text/javascript">
                 function raytracer_start() {
@@ -424,7 +424,7 @@
 			          <source src="images/refnerf.mp4" type="video/mp4">
 			          Your browser does not support the video tag.
 			          </video></div>
-			          <img src='images/refnerf.jpg' width="160">
+			          <img src='images/refnerf.png' width="160">
 			        </div>
 			        <script type="text/javascript">
 			          function refnerf_start() {
