--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </tr>
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-            <tr>
+          <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
               <p>
@@ -188,6 +188,45 @@
             </td>
           </tr>		
 
+          <!-- fabsoften Paper --> 
+          <tr onmouseout="fabsoften_stop()" onmouseover="fabsoften_start()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='fabsoften_image'>
+                  <img src='images/fabsoften_before.png' width="160"></div>
+                <img src='images/fabsoften_after.png' width="160">
+              </div>
+              <script type="text/javascript">
+                function fabsoften_start() {
+                  document.getElementById('fabsoften_image').style.opacity = "1";
+                }
+                function fabsoften_stop() {
+                  document.getElementById('fabsoften_image').style.opacity = "0";
+                }
+                fabsoften_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://openaccess.thecvf.com/content_CVPRW_2020/papers/w31/Velusamy_FabSoften_Face_Beautification_via_Dynamic_Skin_Smoothing_Guided_Feathering_and_CVPRW_2020_paper.pdf">
+                <papertitle>FabSoften: Face Beautification via Dynamic Skin Smoothing, Guided
+                  Feathering, and Texture Restoration</papertitle>
+              </a>
+              <br>
+              Sudha Velusamy,
+              <strong>Rishubh Parihar</strong>,
+              Ravi Kini,               
+              Aniket Rege
+              <br>
+              <em>NTIRE, CVPR</em>, 2020
+              <br>
+              <a href="https://openaccess.thecvf.com/content_CVPRW_2020/papers/w31/Velusamy_FabSoften_Face_Beautification_via_Dynamic_Skin_Smoothing_Guided_Feathering_and_CVPRW_2020_paper.pdf">pdf</a>
+              <p></p> 
+              <p>
+                We propose a real-time face softening approach that smooths blemishes in the facial skin region, followed by a wavelet band manipulation to restore
+                the underlying skin texture, which produces a highly appealing ‘beautified’ face that retains its natural appearance.
+              </p>
+            </td>
+          </tr>		 
 
           <!-- makeup Paper --> 
           <tr onmouseout="makeup_stop()" onmouseover="makeup_start()">
@@ -232,46 +271,7 @@
                 which resulted in natural looking output.
               </p>
             </td>
-          </tr>		 
-
-          <!-- fabsoften Paper --> 
-          <tr onmouseout="fabsoften_stop()" onmouseover="fabsoften_start()">
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <div class="one">
-                <div class="two" id='fabsoften_image'>
-                  <img src='images/fabsoften_before.png' width="160"></div>
-                <img src='images/fabsoften_after.png' width="160">
-              </div>
-              <script type="text/javascript">
-                function fabsoften_start() {
-                  document.getElementById('fabsoften_image').style.opacity = "1";
-                }
-                function fabsoften_stop() {
-                  document.getElementById('fabsoften_image').style.opacity = "0";
-                }
-                fabsoften_stop()
-              </script>
-            </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://openaccess.thecvf.com/content_CVPRW_2020/papers/w31/Velusamy_FabSoften_Face_Beautification_via_Dynamic_Skin_Smoothing_Guided_Feathering_and_CVPRW_2020_paper.pdf">
-                <papertitle>FabSoften: Face Beautification via Dynamic Skin Smoothing, Guided
-                  Feathering, and Texture Restoration</papertitle>
-              </a>
-              <br>
-              Sudha Velusamy,
-              <strong>Rishubh Parihar</strong>,
-              Ravi Kini,               
-              Aniket Rege
-              <br>
-              <em>NTIRE, CVPR</em>, 2020
-              <br>
-              <a href="https://openaccess.thecvf.com/content_CVPRW_2020/papers/w31/Velusamy_FabSoften_Face_Beautification_via_Dynamic_Skin_Smoothing_Guided_Feathering_and_CVPRW_2020_paper.pdf">pdf</a>
-              <p>
-                We propose a real-time face softening approach that smooths blemishes in the facial skin region, followed by a wavelet band manipulation to restore
-                the underlying skin texture, which produces a highly appealing ‘beautified’ face that retains its natural appearance.
-              </p>
-            </td>
-          </tr>		 
+          </tr>		
 
 
           <!-- pixeltransformer Paper --> 
@@ -412,50 +412,78 @@
               </p>
             </td>
           </tr>		
-            
-			    <tr onmouseout="refnerf_stop()" onmouseover="refnerf_start()"  bgcolor="#ffffd0">
-			      <td style="padding:20px;width:25%;vertical-align:middle">
-			        <div class="one">
-			          <div class="two" id='refnerf_image'><video  width=100% height=100% muted autoplay loop>
-			          <source src="images/refnerf.mp4" type="video/mp4">
-			          Your browser does not support the video tag.
-			          </video></div>
-			          <img src='images/refnerf.png' width="160">
-			        </div>
-			        <script type="text/javascript">
-			          function refnerf_start() {
-			            document.getElementById('refnerf_image').style.opacity = "1";
-			          }
+          
+          <tr>
+            <td style="padding:20px;width:100%;vertical-align:middle">
+              <heading>Experience</heading>
 
-			          function refnerf_stop() {
-			            document.getElementById('refnerf_image').style.opacity = "0";
-			          }
-			          refnerf_stop()
-			        </script>
-			      </td>
-			            <td style="padding:20px;width:75%;vertical-align:middle">
-			          <a href="https://dorverbin.github.io/refnerf/index.html">
-			            <papertitle>Ref-NeRF: Structured View-Dependent Appearance for Neural Radiance Fields</papertitle>
-			          </a>
-			          <br>
-			          <a href="https://scholar.harvard.edu/dorverbin/home">Dor Verbin</a>,
-			          <a href="https://phogzone.com/">Peter Hedman</a>,
-			          <a href="https://bmild.github.io/">Ben Mildenhall</a>, <br>
-			          <a href="Todd Zickler">Todd Zickler</a>,
-			          <strong>Jonathan T. Barron</strong>,
-			          <a href="https://pratulsrinivasan.github.io/">Pratul Srinivasan</a>
-			          <br>
-			    <em>CVPR</em>, 2022 &nbsp <font color="red"><strong>(Oral Presentation, Best Student Paper Honorable Mention)</strong></font>
-			          <br>
-			          <a href="https://dorverbin.github.io/refnerf/index.html">project page</a>
-			    /
-			          <a href="https://arxiv.org/abs/2112.03907">arXiv</a>
-			    /
-			          <a href="https://youtu.be/qrdRH9irAlk">video</a>
-			          <p></p>
-			          <p>Explicitly modeling reflections in NeRF produces realistic shiny surfaces and accurate surface normals, and lets you edit materials.</p>
-			        </td>
-			      </tr>
+
+          <!-- PhD --> 
+          <tr onmouseout="phd_stop()" onmouseover="phd_start()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='iisc_logo'>
+                  <img src='images/iisc_logo.jpeg' width="160"></div>
+                <img src='images/iisc_logo.jpeg' width="160">
+              </div>
+              <script type="text/javascript">
+                function phd_start() {
+                  document.getElementById('iisc_logo').style.opacity = "1";
+                }
+                function phd_stop() {
+                  document.getElementById('iisc_logo').style.opacity = "0";
+                }
+                phd_stop()
+            </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="None">
+                <papertitle>Indian Institute of Science</papertitle>
+              </a>
+              <br>
+              <strong>August 2021 - Current</strong>,
+              <br>
+
+              <p></p> 
+            </td>
+          </tr>		
+
+
+
+          <!-- BTech --> 
+          <tr onmouseout="btech_stop()" onmouseover="btech_start()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='iitd_logo'>
+                  <img src='images/iitd_logo.png' width="160"></div>
+                <img src='images/iitd_logo.png' width="160">
+              </div>
+              <script type="text/javascript">
+                function btech_start() {
+                  document.getElementById('iitd_logo').style.opacity = "1";
+                }
+                function btech_stop() {
+                  document.getElementById('iitd_logo').style.opacity = "0";
+                }
+                btech_stop()
+            </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="None">
+                <papertitle>Indian Institute of Technology, Delhi</papertitle>
+              </a>
+              <br>
+              <strong>July 2014 - May 2018</strong>,
+              <br>
+
+              <p></p> 
+            </td>
+          </tr>		
+
+
+
+
+
 				  </td>
     </tr>
   </table>
