--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               </p>
               <p> I am a second year Ph.D. student at <a href="https://iisc.ac.in/"> Indian Insitute of Science, Bangalore </a> and associated with <a href="https://val.cds.iisc.ac.in/"> Video Analytics Lab </a>. I am advised by <a href="http://cds.iisc.ac.in/faculty/venky/">Prof. Venkatesh Babu</a> from Department of Computational and Data Sciences.
               Previously, I worked at <a ref="https://sharechat.com/">ShareChat</a> where I developed and deployed large scale machine learning algorithms for content moderation for social media platforms ShareChat and Moj. Even before that, I worked on developing computer vision solutions for smartphones at <a href="https://research.samsung.com/sri-b">Samsung Research Bangalore</a>. 
-              I completed Batchelors of Technology in Mathematics and Computing in 2018 from <a href="https://home.iitd.ac.in/">Indian Insitute of Technology Delhi</a>.
+              I graduated with Bachelor of Technology in Mathematics and Computing in 2018 from <a href="https://home.iitd.ac.in/">Indian Insitute of Technology Delhi</a>.
               </p>
               <p>
                 My research interests are <strong>Image and Video synthesis and manipulation</strong> using Deep Generative Models. I am also excited about <strong>Neural Radiance Fields (NeRFs)</strong> and its extentions.
