--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               I graduated with Bachelor of Technology in Mathematics and Computing in 2018 from <a href="https://home.iitd.ac.in/">Indian Insitute of Technology Delhi</a>.
               </p>
               <p>
-                My research interests are <strong>Image and Video synthesis and manipulation</strong> using Deep Generative Models. I am also excited about <strong>Neural Radiance Fields (NeRFs)</strong> and its extentions.
+                My research interests are <strong>Image and Video manipulation with deep generative models</strong>. Spefically, I focus on leveraging rich priors from deep generative models for downstream image editing tasks. 
               </p>
               <p style="text-align:center">
                 <a href="mailto:rishubhp@iisc.ac.in">Email</a> &nbsp/&nbsp
