--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
                 <div class="two" id='motion_image'>
-                  <img src='images/motion_style.before' width="160"></div>
+                  <img src='images/motion_style_before.gif' width="160"></div>
                 <img src='images/motion_style_after.gif' width="160">
               </div>
               <script type="text/javascript">
