--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
                 <name>Rishubh Parihar</name>
               </p>
               <p style="text-align: justify;"> 
-              <font size="3"> I am a third year Ph.D. student at <a href="https://iisc.ac.in/"> Indian Insitute of Science, Bangalore </a> and associated with <a href="https://val.cds.iisc.ac.in/"> Video Analytics Lab </a>. I am advised by <a href="http://cds.iisc.ac.in/faculty/venky/">Prof. Venkatesh Babu</a> from Department of Computational and Data Sciences.
+              <font size="3"> I am a fourth year Ph.D. student at <a href="https://iisc.ac.in/"> Indian Insitute of Science, Bangalore </a> and associated with <a href="https://val.cds.iisc.ac.in/"> Video Analytics Lab </a>. I am advised by <a href="http://cds.iisc.ac.in/faculty/venky/">Prof. Venkatesh Babu</a> from Department of Computational and Data Sciences.
               Previously, I worked at <a ref="https://sharechat.com/">ShareChat</a> where I developed and deployed large scale machine learning algorithms for content moderation for social media platforms ShareChat and Moj. Even before that, I worked on developing computer vision solutions for smartphones at <a href="https://research.samsung.com/sri-b">Samsung Research Bangalore</a>. 
               I graduated with Bachelor of Technology in Mathematics and Computing in 2018 from <a href="https://home.iitd.ac.in/">Indian Insitute of Technology Delhi</a>.</font>
               </p>
               <p style="text-align: justify;"> 
               <font size="3">
-                My research interests are <strong>Image and Video manipulation with deep generative models</strong>. Specifically, my research focus on leveraging rich priors from deep generative models for downstream image editing tasks. 
+                My research focuses on developing approaches to enhance controllability and designing new interfaces to interact with large-scale image generative models.  
               </font>
               </p>
               <p style="text-align:center">
