--- a/index.html
+++ b/index.html
@@ -56,14 +56,11 @@
                 rishubhp@iisc.ac.in
               </p>
               <p style="line-height:1.4; font-family: 'Nunito', sans-serif; font-weight: 300" > 
-              <font size="2"> I am a fourth year Ph.D. student at <a href="https://iisc.ac.in/"> Indian Insitute of Science, Bangalore </a> and associated with <a href="https://val.cds.iisc.ac.in/"> Vision and AI Lab </a>. I am advised by <a href="http://cds.iisc.ac.in/faculty/venky/">Prof. Venkatesh Babu</a> from Department of Computational and Data Sciences.
-              Before joining Ph.D., I worked at Samsung and Sharechat for a few years. I completed my Bachelors of Technology in Mathematics and Computing in 2018 from IIT Delhi, where I was adviced by Prof. <a href="https://www.cse.iitd.ac.in/~pkalra/">Prem Kalra</a> on synthetic makeup transfer.  
-              </font>
+              I am a fourth year Ph.D. student at <a href="https://iisc.ac.in/"> Indian Insitute of Science, Bangalore </a> and associated with <a href="https://val.cds.iisc.ac.in/"> Vision and AI Lab </a>. I am advised by <a href="http://cds.iisc.ac.in/faculty/venky/">Prof. Venkatesh Babu</a> from Department of Computational and Data Sciences.
+              Before joining Ph.D., I worked at Samsung and Sharechat for a few years. I completed my Bachelors of Technology in Mathematics and Computing in 2018 from IIT Delhi, where I was adviced by Prof. <a href="https://www.cse.iitd.ac.in/~pkalra/">Prem Kalra</a> on synthetic makeup transfer.   
               </p>
               <p style="line-height:1.4; font-family: 'Nunito', sans-serif; font-weight: 300"> 
-              <font size="2">
-                I work on developing methods to enhance controllability in image and video generative models, by designing intuitive interfaces beyond text to interact with these models.
-              </font>
+              I work on developing methods to enhance controllability in image and video generative models, by designing intuitive interfaces beyond text to interact with these models.
               </p>
               <p style="text-align:left">
                 <a href="https://scholar.google.com/citations?user=RaRoJFYAAAAJ&hl=en">[Google Scholar]</a>
