--- a/index.html
+++ b/index.html
@@ -56,11 +56,12 @@
                 rishubhp@iisc.ac.in
               </p>
               <p style="line-height:1.4; font-family: 'Nunito', sans-serif; font-weight: 300" > 
-              I am a fourth year Ph.D. student at <a href="https://iisc.ac.in/"> Indian Insitute of Science, Bangalore </a> and associated with <a href="https://val.cds.iisc.ac.in/"> Vision and AI Lab </a>. I am advised by <a href="http://cds.iisc.ac.in/faculty/venky/">Prof. Venkatesh Babu</a> from Department of Computational and Data Sciences.
-              Before joining Ph.D., I worked at Samsung and Sharechat for a few years. I completed my Bachelors of Technology in Mathematics and Computing in 2018 from IIT Delhi, where I was adviced by Prof. <a href="https://www.cse.iitd.ac.in/~pkalra/">Prem Kalra</a> on synthetic makeup transfer.   
+              I am a fourth year PhD student at IISc Bangalore, advised by <a href="http://cds.iisc.ac.in/faculty/venky/">Prof. Venkatesh Babu</a>.
+              Prior to my Ph.D., I gained industry experience at Samsung Research, where I developed face editing solutions for Samsung smartphones, and at ShareChat, focusing on multimodal algorithms for content moderation. 
+              I obtained BTech from IIT Delhi in Mathematics and Computing, where I was worked with by Prof. <a href="https://www.cse.iitd.ac.in/~pkalra/">Prem Kalra</a> on synthetic makeup transfer.   
               </p>
               <p style="line-height:1.4; font-family: 'Nunito', sans-serif; font-weight: 300"> 
-              I work on developing methods to enhance controllability in image and video generative models, by designing intuitive interfaces beyond text to interact with these models.
+              I work on developing methods to enhance controllability in vision generative models, by designing interfaces beyond text to interact with these models.
               </p>
               <p style="text-align:left">
                 <a href="https://scholar.google.com/citations?user=RaRoJFYAAAAJ&hl=en">[Google Scholar]</a>
