--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <p style="line-height:1.4; font-family: 'Nunito', sans-serif; font-weight: 300" > 
               I am a fourth year PhD student at IISc Bangalore, advised by <a href="http://cds.iisc.ac.in/faculty/venky/">Prof. Venkatesh Babu</a>.
               Prior to my Ph.D., I gained industry experience at Samsung Research, where I developed face editing solutions for Samsung smartphones, and at ShareChat, focusing on multimodal algorithms for content moderation. 
-              I obtained BTech from IIT Delhi in Mathematics and Computing, where I was worked with by Prof. <a href="https://www.cse.iitd.ac.in/~pkalra/">Prem Kalra</a> on synthetic makeup transfer.   
+              I obtained BTech from IIT Delhi in Mathematics and Computing, where I worked with Prof. <a href="https://www.cse.iitd.ac.in/~pkalra/">Prem Kalra</a> on synthetic makeup transfer.   
               </p>
               <p style="line-height:1.4; font-family: 'Nunito', sans-serif; font-weight: 300"> 
               I work on developing methods to enhance controllability in vision generative models, by designing interfaces beyond text to interact with these models.
