small bug fixes

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             </td>
 
             <td style="padding-left:5px;padding-right:40px;padding-top:20;padding-bottom:20;width:80%;vertical-align:top">
-              <papertitle><font size="3">Text2Place : Affordance Aware Human Guided Placement</font></papertitle>
+              <papertitle><font size="3">Text2Place: Affordance Aware Human Guided Placement</font></papertitle>
               <br> 
               <font size="2">
               <strong>Rishubh Parihar</strong>,
@@ -483,9 +483,9 @@
         <span style="font-size:22px;">Honors</span>
         <ul>
           <li> <a href="https://odaa.iisc.ac.in/prof-satish-dhawan-research-award/#:~:text=Prof%20Satish%20Dhawan%20Research%20Award%20was%20instituted%20by%20alumnus%20Swapnesh,focus%20on%20benefiting%20developing%20countries.">Satish Dhawan Research Award 2024</a> for significant contributions to the mechanisms for controlling generative models.</li>
-          <li> Best Presentation Award in Visual Cluster at <a href="https://eecs.iisc.ac.in/EECS2023/">IISc EECS Research Students Symposium 2023</a>.</li> 
-          <li> Pradhan Mantri Research Fellowship (<a href="https://www.pmrf.in/">PMRF</a>) direct entry 2021</li>
-          <li> Academics excellence award for 2018 Spring semester </li>
+          <li> Best Presentation Award in Visual Cluster at <a href="https://eecs.iisc.ac.in/EECS2023/">IISc EECS Research Students Symposium 2023</a>.</li>
+          <li> Selected for Pradhan Mantri Research Fellowship (<a href="https://www.pmrf.in/">PMRF</a>) 2021.</li>
+          <li> Academics excellence award for 2018 Spring semester IIT Delhi.</li>
         </ul>
       </p> 
     <hr>
@@ -499,7 +499,7 @@
         <span style="font-size:22px;">Reviewing</span>
         <br>
         <p>
-        NeurIPS 2024, ECCV 2024, CVPR 2024, WACV 2024, ICCV 2023, CVPR 2023, ECCV 2022
+        WACV 2025, NeurIPS 2024, ECCV 2024, CVPR 2024, WACV 2024, ICCV 2023, CVPR 2023, ECCV 2022
       </p>
       </p>
     <hr>
